--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+body{
+    background-color: rgb(154, 215, 255);
+    background-image: linear-gradient(to bottom right, rgb(154, 215, 255), rgb(255, 255, 255));
+    height: 100vh;
+}
+.social-icons-container {
+    padding-top: 70px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+    font-family: 'Press Start 2P', cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.bio{
+    margin-top: 40px;
+}
+.bio-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.heading{
+    margin-top: 100px;
+    font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social-icon {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    
+}
+
+.social-icon img {
+    
+    margin-bottom: 0px;
+    width: 60px;
+}
+
+.social-icon:hover,
+.contact-btn:hover {
+    filter: drop-shadow(0px 8px 8px rgba(0, 0, 0, 0.32));
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+@media only screen and (max-width: 640px) {
+    .social-icon {
+        margin: 8px 21px;
+    }
+    .contact-form-container {
+        width: 80%;
+    }
+
+    .header-text > p {
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+    .responsive-img {
+        margin: 0;
+    }
+    .title {
+        font-size: 30px;
+    }
+
 }
